# thincollections

./: .gitignore  Cargo.toml
benches/: map_default_bench_32x32.rs  map_default_bench_64x64.rs  map_trivial_bench_32x32.rs  vec_bench.rs
benchmarks/: map-results.md
src/: lib.rs  thin_hasher.rs  thin_map.rs  thin_sentinel.rs  thin_set.rs  thin_v64.rs  thin_vec.rs
tests/: stable_thinmap_tests.rs  stable_thinvec_tests.rs  stable_v64_tests.rs  stable_v64u8_tests.rs
